tests/fixtures/valid/multi/instantiated_import_type_binding/src/lib/main.gcl
// main.gcl -- rebinds the lib's Widget type to MyWidget
type MyWidget {
    MyWidget(size: Length),
}

include lib.lib(Widget: MyWidget).{ origin_size };

node result: Length = @origin_size;
