tests/fixtures/invalid/non_exhaustive_match.gcl
// Error: non-exhaustive match — missing variant
pub type Status {
    Nominal,
    Warning(code: Dimensionless),
    Critical(code: Dimensionless),
}

param s: Status = Nominal;

node result: Dimensionless = match @s {
    Nominal => 0.0,
    Warning(code) => code,
};
